--- a/source/index.html
+++ b/source/index.html
@@ -207,8 +207,8 @@
             <li class="prizes__item prizes__item--cases">
               <div class="prizes__icon">
                 <picture>
-                  <source srcset="img/prize2-mob.svg" media="(orientation: portrait)">
-                  <img src="img/prize2.svg" alt="">
+                  <source srcset="img/secondary-award.svg" media="(orientation: portrait)">
+                  <img src="img/secondary-award.svg" alt="">
                 </picture>
               </div>
               <p class="prizes__desc">
