--- a/source/index.html
+++ b/source/index.html
@@ -219,8 +219,8 @@
             <li class="prizes__item prizes__item--codes">
               <div class="prizes__icon">
                 <picture>
-                  <source srcset="img/prize3-mob.svg" media="(orientation: portrait)">
-                  <img src="img/prize3.svg" alt="">
+                  <source srcset="img/additional-award.svg" media="(orientation: portrait)">
+                  <img src="img/additional-award.svg" alt="">
                 </picture>
               </div>
               <p class="prizes__desc">
